--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cSpell.language": "en,pt-BR"
+  "cSpell.language": "en,pt-BR",
+  // "editor.fontFamily": "'Roboto Sans Mono', monospace"
 }
